fix(typescript): Enable strict TypeScript checks and include all directories
PROBLEMA IDENTIFICATĂ:
IDE-ul (VS Code) nu arăta ~2100 erori TypeScript pe care 'tsc' le găsea cu flag-uri stricte.

ROOT CAUSE ANALYSIS:
1. tsconfig.json avea doar 'strict: true' (7 flags)
2. Lipseau 8 flag-uri TypeScript stricte suplimentare
3. IDE folosește tsconfig.json → nu vedea erorile
4. Directoare neacoperite: migrations/, scripts/, *.config.ts

De ce se întâmpla:
- 'strict: true' activează doar: noImplicitAny, strictNullChecks, etc
- NU activează: noUnusedLocals, noUnusedParameters, noImplicitReturns, etc
- VS Code TypeScript Language Server respectă EXACT tsconfig.json
- Fără flag-uri în config = fără erori în IDE

Directoare excluse anterior:
- migrations/ (43 fișiere .ts) - NEVERIFICAT
- scripts/ (3 fișiere .ts) - NEVERIFICAT
- *.config.ts (root configs) - NEVERIFICAT

Schimbări în tsconfig.json:

1. INCLUDE - Acoperire Completă:
   + migrations/**/*
   + scripts/**/*
   + *.config.ts
   = Total: 1360 fișiere TypeScript (vs 1314 anterior)

2. COMPILER OPTIONS - Flag-uri Stricte Adăugate:
   + noImplicitReturns: true (detectează funcții fără return)
   + noFallthroughCasesInSwitch: true (previne bugs în switch)
   + noUnusedLocals: true (variabile nefolosite)
   + noUnusedParameters: true (parametri nefolosiți)
   + noImplicitOverride: true (override explicit)
   + noPropertyAccessFromIndexSignature: true (acces sigur proprietăți)
   + allowUnreachableCode: false (cod inaccesibil = eroare)
   + allowUnusedLabels: false (label-uri nefolosite = eroare)

3. Documentație Completă:
   + TYPESCRIPT-CONFIG-EXPLANATION.md (9.5KB)
     * De ce IDE nu arăta erorile
     * Diferența strict vs toate flag-urile
     * Impact breakdown per tip de eroare
     * Plan de acțiune pe 4 faze

   + TYPESCRIPT-AUDIT-REPORT.md
     * Audit complet codebase
     * 2103 erori găsite și categorizate
     * Recomandări prioritizate

   + tsconfig.recommended.json
     * Configurație gold standard pentru v

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,19 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "noEmitHelpers": true,
+    
+    /* Strict Type-Checking */
     "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    
+    /* Module Resolution */
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
