fix(typescript): Rezolvă erori rootDir și import paths
- Eliminat rootDir din tsconfig (cauza erorilor 'not under rootDir')
- Adăugat noEmit pentru apps/api, libs/audit, libs/shared
- Eliminat import-uri greșite ../server/modules din libs/shared/src/schema.ts
- Eliminat import-uri greșite din libs/shared/src/schema/index.ts
- Fix permite import-uri cross-library în NX monorepo

--- a/libs/shared/tsconfig.json
+++ b/libs/shared/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": true,
     "declarationMap": true,
     "outDir": "../../dist/libs/shared",
-    "rootDir": "src"
+    "noEmit": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
