--- a/libs/audit/tsconfig.json
+++ b/libs/audit/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": true,
     "declarationMap": true,
     "outDir": "../../dist/libs/audit",
-    "rootDir": "src"
+    "noEmit": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
