fix: Exclude directoare vechi din tsconfig pentru a elimina duplicate exports
- Adăugat client/, server/, shared/ în exclude din tsconfig.json
- Rezolvă erori code 2308 (duplicate exports UserRole, DocumentCounter)
- TypeScript scanează doar noua structură apps/ și libs/

Erori rezolvate:
✅ libs/shared/src/index.ts - duplicate UserRole
✅ shared/schema.ts - duplicate DocumentCounter (acum ignorat)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "utils/testing",
     "build",
     "dist",
-    "node_modules"
+    "node_modules",
+    "client",
+    "server",
+    "shared"
   ],
   "compilerOptions": {
     "incremental": true,
