--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,15 +8,14 @@ RUN apk add --no-cache python3 py3-pip make g++ git postgresql-client redis \
     cairo cairo-dev pango pango-dev pixman pixman-dev \
     jpeg-dev giflib-dev librsvg-dev dcron busybox-extras
 
-# Instalăm nodemon pentru dezvoltare și instrumente utile CLI
-RUN npm install -g nodemon drizzle-kit tsx ts-node
+# Instalăm pnpm și instrumente utile CLI
+RUN npm install -g pnpm@latest nodemon drizzle-kit tsx ts-node
 
 # Copiem fișierele de dependințe
-COPY package*.json ./
+COPY package.json pnpm-lock.yaml .npmrc pnpm-workspace.yaml ./
 
 # Instalăm toate dependențele inclusiv cele de dezvoltare
-# Folosim --legacy-peer-deps pentru compatibilitate Cypress 15 cu NX
-RUN npm install --legacy-peer-deps
+RUN pnpm install
 
 # Copiem TOATE fișierele, inclusiv .env și credențiale
 COPY . .
@@ -33,5 +32,5 @@ COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
 ENTRYPOINT ["docker-entrypoint.sh"]
-# Temporar: rulează cu structura veche până la completarea migrării import-urilor
-CMD ["tsx", "server/index.ts"]
+# Rulează aplicația NX cu pnpm
+CMD ["pnpm", "run", "dev"]
