--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,6 @@
 # Hoisting complet pentru compatibilitate Nx + TypeScript
+# node-linker=hoisted forțează flat structure (elimină .pnpm symlinks)
+node-linker=hoisted
 shamefully-hoist=true
 public-hoist-pattern[]=*
 
