--- a/.nx/workspace-data/project-graph.json
+++ b/.nx/workspace-data/project-graph.json
@@ -937,7 +937,7 @@
           "serve": {
             "executor": "nx:run-commands",
             "options": {
-              "command": "tsx watch apps/api/src/main.ts",
+              "command": "NODE_OPTIONS='--import=tsx/esm' tsx watch --tsconfig=tsconfig.base.json apps/api/src/main.ts",
               "cwd": "apps/api/../.."
             },
             "configurations": {},
@@ -46722,5 +46722,5 @@
   },
   "version": "6.0",
   "errors": [],
-  "computedAt": 1761141762647
+  "computedAt": 1761151410851
 }
