--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -58,7 +58,7 @@
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "tsx watch apps/api/src/main.ts",
+        "command": "NODE_OPTIONS='--import=tsx/esm' tsx watch --tsconfig=tsconfig.base.json apps/api/src/main.ts",
         "cwd": "{projectRoot}/../.."
       }
     },
