--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,30 +1,18 @@
 server {
     listen 80;
-    server_name _;
+    server_name geniuserp.app www.geniuserp.app;
     
-    # Redirectionează la HTTPS dacă e configurat
-    # Decomentați aceste linii după ce configurați SSL
-    # location / {
-    #     return 301 https://$host$request_uri;
-    # }
-
-    # Configurare pentru HTTP (eliminați sau modificați după configurarea SSL)
+    # Proxy către aplicația Express pe portul 5000
+    # Express servește TOTUL: frontend + backend + API
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-        
-        # Setări de securitate de bază
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header X-Frame-Options SAMEORIGIN;
-    }
-    
-    # Proxy pentru API
-    location /api/ {
         proxy_pass http://app:5000;
         proxy_http_version 1.1;
+        
+        # WebSocket support pentru HMR
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+        
+        # Headers importante
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,13 +24,11 @@ server {
         proxy_send_timeout 600;
         proxy_read_timeout 600;
         send_timeout 600;
-    }
-    
-    # Fișierele statice
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-        root /usr/share/nginx/html;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
+        
+        # Setări de securitate de bază
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Frame-Options SAMEORIGIN;
     }
     
     # Logs
@@ -50,10 +36,10 @@ server {
     error_log /var/log/nginx/error.log;
 }
 
-# Configurare HTTPS - Decomentați după ce configurați certificatele SSL
+# Configurare HTTPS - Pentru activare în viitor cu SSL
 # server {
 #     listen 443 ssl http2;
-#     server_name _;
+#     server_name geniuserp.app www.geniuserp.app;
 #     
 #     # Certificatele SSL
 #     ssl_certificate /etc/nginx/ssl/fullchain.pem;
@@ -69,27 +55,19 @@ server {
 #     ssl_stapling_verify on;
 #     
 #     # Setări HSTS
-#     add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
+#     add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload" always;
 #     
+#     # Proxy către aplicația Express pe portul 5000
+#     # Express servește TOTUL: frontend + backend + API
 #     location / {
-#         root /usr/share/nginx/html;
-#         try_files $uri $uri/ /index.html;
-#         
-#         # Setări de securitate întărite (ACTIVAT)
-#         add_header X-Content-Type-Options nosniff always;
-#         add_header X-XSS-Protection "1; mode=block" always;
-#         add_header X-Frame-Options DENY always;
-#         add_header Referrer-Policy strict-origin-when-cross-origin always;
-#         # Content Security Policy ACTIVAT pentru protecție XSS
-#         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://webservicesp.anaf.ro wss: ws:; frame-src 'none'; object-src 'none'; upgrade-insecure-requests;" always;
-#     }
-#     
-#     # Proxy pentru API
-#     location /api/ {
 #         proxy_pass http://app:5000;
 #         proxy_http_version 1.1;
+#         
+#         # WebSocket support pentru HMR
 #         proxy_set_header Upgrade $http_upgrade;
 #         proxy_set_header Connection 'upgrade';
+#         
+#         # Headers importante
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -101,13 +79,14 @@ server {
 #         proxy_send_timeout 600;
 #         proxy_read_timeout 600;
 #         send_timeout 600;
-#     }
-#     
-#     # Fișierele statice
-#     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-#         root /usr/share/nginx/html;
-#         expires 30d;
-#         add_header Cache-Control "public, no-transform";
+#         
+#         # Setări de securitate întărite
+#         add_header X-Content-Type-Options nosniff always;
+#         add_header X-XSS-Protection "1; mode=block" always;
+#         add_header X-Frame-Options SAMEORIGIN always;
+#         add_header Referrer-Policy strict-origin-when-cross-origin always;
+#         # Content Security Policy ACTIVAT pentru protecție XSS
+#         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://webservicesp.anaf.ro wss: ws:; frame-src 'none'; object-src 'none'; upgrade-insecure-requests;" always;
 #     }
 #     
 #     # Logs
