fix(typescript): resolve TypeScript configuration and import issues
- Remove restrictive 'rootDir' from all library tsconfig.json files
- Fix import paths in libs/ai/src/services/ai.service.ts (audit, analytics)
- Fix noPropertyAccessFromIndexSignature issues using bracket notation for parameters
- Fix import paths in settings routes (JwtAuthMode, AuthGuard)
- Add AuthenticatedRequest interface to setup.routes.ts
- Update all route handlers to use AuthenticatedRequest type
- Ensure TypeScript can compile cross-library imports correctly

These are REAL issues, not configuration glitches:
- rootDir prevents imports from outside the module folder
- Bracket notation required for strict TypeScript index signatures
- Proper type definitions needed for authenticated requests

--- a/libs/ai/tsconfig.json
+++ b/libs/ai/tsconfig.json
@@ -6,8 +6,7 @@
     "types": ["node"],
     "declaration": true,
     "declarationMap": true,
-    "outDir": "../../dist/libs/ai",
-    "rootDir": "src"
+    "outDir": "../../dist/libs/ai"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
