--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,23 @@ build/
 out/
 
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Package manager lock files (only pnpm-lock.yaml is allowed)
+package-lock.json
+yarn.lock
+.yarn/
+.pnp.*
+
+# Dependency directories
+node_modules/
+.pnpm-store/
 yarn-debug.log*
 yarn-error.log*
 typescript-errors*.txt
