--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "packageManager": "pnpm@10.19.0",
+  "engines": {
+    "node": ">=22.0.0",
+    "pnpm": ">=10.0.0",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "nx run-many --target=serve --projects=api,web --parallel=2",
     "dev:api": "nx serve api",
     "dev:web": "nx serve web",
